  specification of multiple sub-build targets, which are executed
  with a single dependency analysis.
  
* Major revision of <wsdltodotnet>. Supports mono wsdl and the microsoft
  wsdl run on mono, as well as most of the .NET WSE2.0 options. Extra
  schemas (files or urls) can be named in the <schema> element.
  Compilers can be selected using the compiler attribute, which defaults
  to "microsoft" on windows, and "mono" on everything else.   

Changes from Ant 1.6.2 to current Ant 1.6 CVS version
=====================================================

Changes that could break older environments:
--------------------------------------------

Other changes:
--------------

* New attribute ignorecontents for <different> selector

* Javadoc fixes for Location, Project, and RuntimeConfigurable
  Bugzilla 30160.

* Enable to choose the regexp implementation without system property.
  Bugzilla Report 15390.

* Expose objects and  methods in IntrospectionHelper. Bugzilla Report 30794.

Fixed bugs:
-----------

* AbstractCvsTask prematurely closed its outputStream and errorStream.
  Bugzilla 30097.

* Impossible to use implicit classpath for <taskdef>
  when Ant core loader != Java application loader and Path.systemClassPath taken from ${java.class.path}
  Bugzilla 30161.

* MacroInstance did not clean up nested elements correctly in the execute method, causing
  multiple use of the same macro instance with nested elements to fail.

* checksum fileext property doc wrong. Bugzilla 30787.

* FTP task, getTimeDiff method was returning wrong value. Bugzilla 30595.

* Zip task was not zipping when only empty directories were found. Bugzilla 30365.

Changes from Ant 1.6.1 to Ant 1.6.2
===================================

Changes that could break older environments:
--------------------------------------------

* The import task used the canonical version of a file path. This
  has been changed to use the absolute path. Bugzilla 28505.
