@@ -16,6 +16,10 @@ turned off, then files are only moved if the source file is newer than
 the destination file, or when the destination file does not exist.</p>
 <p><a href="../CoreTypes/fileset.html">FileSet</a>s are used to select sets of files
 to move to the <var>todir</var> directory.</p>
+<p><b>Since Ant 1.6.3</b>, the <i>file</i> attribute may be used to move
+(rename) an entire directory.  If <i>tofile</i> denotes an existing file, or
+there is a directory by the same name in <i>todir</i>, the action will fail.
+</p>
 <h3>Parameters</h3>
 <table border="1" cellpadding="2" cellspacing="0">
   <tr>
@@ -25,7 +29,7 @@ to move to the <var>todir</var> directory.</p>
   </tr>
   <tr>
     <td valign="top">file</td>
-    <td valign="top">the file to move</td>
+    <td valign="top">the file or directory to move</td>
     <td valign="top" align="center">One of <var>file</var> or
      at least one nested fileset element</td>
   </tr>
@@ -78,7 +82,7 @@ to move to the <var>todir</var> directory.</p>
   </tr>
   <tr>
     <td valign="top">failonerror</td>
-     <td valign="top">Log a warning message, but do not stop the
+     <td valign="top">If false, log a warning message, but do not stop the
        build, when the file to copy does not exist or one of the nested
        filesets points to a directory that doesn't exist or an error occurs
        while moving.
@@ -154,6 +158,10 @@ followed by &lt;filterset&gt; elements.
   &lt;move todir=&quot;new/dir/to/move/to&quot;&gt;
     &lt;fileset dir=&quot;src/dir&quot;/&gt;
   &lt;/move&gt;
+</pre>
+  <i>or, since Ant 1.6.3:</i>
+<pre>
+  &lt;move file=&quot;src/dir&quot; tofile=&quot;new/dir/to/move/to&quot; /&gt;
 </pre>
 <p><b>Move a set of files to a new directory</b></p>
 <pre>
